fixed homepage button error and added styling, and media queries, having bug with navbar collapse button

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+:root {
+  --primary: #07548c;
+  --secondary: rgba(68, 0, 88, 0.705);
+  --tertiary: #1499f8;
+  ;
+  --linear: linear-gradient(to right, #07548c, rgba(68, 0, 88, 0.705));
+  --linear-grad: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
+  --light-warning: #f0ad4e;
+  --border-radius: .3rem;
+  --btn-shadow: rgba(218, 122, 247, 0.856);
+
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -31,18 +45,70 @@ code {
   left: -1px;
 }
 
-/* 
-.bg-image {
- background-image: url('./assets/jumbotron/images.jfif');
- background-size: 100% 100%;
- opacity: 75%;
-} */
+.post {
+  position: absolute;
 
+  margin: auto;
+  left: 15%;
+  top: 64%;
 
-/* .navbar{
+}
+
+.move-bg {
+  background-image: var(--linear-grad);
+  color: white;
+}
+.post:hover {
  
-  background-image: url('./assets/jumbotron/images.jfif');
-  } */
-/* className='github-link'  link-dark */
+  padding: 6px 5px;
+  margin: 5px 0;
+
+  color: black;
+  border: none;
+  outline: none;
+  background-image: var(--linear-grad);
+  background-size: 200% auto;
+  transition: 0.7s;
+  background-position: right center;
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .post{
+    position: absolute;
+
+    margin: auto;
+    left: 38%;
+    top: 70%;
+  
+  }
+
+  
+}
+
+/* Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) and (max-width: 767.98px) { 
+  .post{
+    position: absolute;
+
+    margin: auto;
+    left: 53%;
+    top: 70%;
+  
+  }
+
+   }
 
 
+
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) { 
+  .post{
+    position: absolute;
+
+    margin: auto;
+    left: 45%;
+    top: 70%;
+  
+  }
+}
